--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "xiang/hello",
+    "name": "xiangjunbo2/hello",
     "description": "echo hello",
     "license": "MIT",
     "authors": [
